Fix spacing in surveys list

--- a/app/assets/stylesheets/components/surveys.scss
+++ b/app/assets/stylesheets/components/surveys.scss
@@ -113,7 +113,7 @@
 
   .survey-list__item {
     display: block;
-    padding: 10px;
+    padding: 15px 0;
 
     color: inherit;
 
